# advent

./: .gitignore  README.md  pyproject.toml
1/: 1  1.py  1.rs
2/: 2  2.cpp  2.py  2.rs  2_alt.rs
2020/2020/: pyproject.toml
2020/2020/aoc/day01/: __init__.py
2020/aoc/: __main__.py
2020/aoc/day01/: __init__.py
2020/aoc/day02/: __init__.py
2020/aoc/day03/: __init__.py
2020/aoc/day04/: __init__.py
2020/aoc/day05/: __init__.py
2020/aoc/day06/: __init__.py
3/: 3.py
aoc/: __main__.py
aoc/day01/: __init__.py
