[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Starchery <pivotsallit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prefixed = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
